--- a/package.json
+++ b/package.json
@@ -9,16 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.23",
-    "@tanstack/vue-query": "^5.87.4",
-    "@vee-validate/zod": "^4.15.1",
     "axios": "^1.11.0",
-    "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
-    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
-    "zod": "3.24.0"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
